[gd_scene load_steps=25 format=3 uid="uid://c0lh4i8emqi1u"]

[ext_resource type="Texture2D" uid="uid://ctospsegejte6" path="res://scenes/objects/ball/normal-ball.png" id="1_3tgxj"]
[ext_resource type="Texture2D" uid="uid://bjb6d0dh6j71e" path="res://scenes/objects/ball/bounce-ball-bot-to-top/ball-0.png" id="1_dci52"]
[ext_resource type="Script" path="res://scenes/objects/ball/ball.gd" id="1_udoo6"]
[ext_resource type="Texture2D" uid="uid://cb8mq541r8yje" path="res://scenes/objects/ball/bounce-ball-bot-to-top/ball-1.png" id="2_4tnid"]
[ext_resource type="Texture2D" uid="uid://lr3sui5n5hye" path="res://scenes/objects/ball/bounce-ball-bot-to-top/ball-2.png" id="3_vk3rx"]
[ext_resource type="Texture2D" uid="uid://blrsch5yhrs2j" path="res://scenes/objects/ball/bounce-ball-bot-to-top/ball-3.png" id="4_1q8se"]
[ext_resource type="Texture2D" uid="uid://k0g8g8ihuwcj" path="res://scenes/objects/ball/bounce-ball-bot-to-top/ball-4.png" id="5_u60dv"]
[ext_resource type="Texture2D" uid="uid://ccpukjuv8s3nx" path="res://scenes/objects/ball/bounce-ball-left-right/ball-0.png" id="6_nmr2v"]
[ext_resource type="Texture2D" uid="uid://dhvftqkg7si1r" path="res://scenes/objects/ball/bounce-ball-left-right/ball-1.png" id="7_r4a1k"]
[ext_resource type="Texture2D" uid="uid://btq7eb377pt2i" path="res://scenes/objects/ball/bounce-ball-left-right/ball-2.png" id="8_emq21"]
[ext_resource type="Texture2D" uid="uid://b07xmt8ysfi84" path="res://scenes/objects/ball/bounce-ball-left-right/ball-3.png" id="9_n540x"]
[ext_resource type="Texture2D" uid="uid://dh1lownp7wgf" path="res://scenes/objects/ball/bounce-ball-left-right/ball-4.png" id="10_l8roq"]
[ext_resource type="Texture2D" uid="uid://d122wbh3ddqyx" path="res://scenes/objects/ball/bounce-ball-right-left/ball-0.png" id="11_tvjly"]
[ext_resource type="Texture2D" uid="uid://bdrtbfe754650" path="res://scenes/objects/ball/bounce-ball-right-left/ball-1.png" id="12_mkg85"]
[ext_resource type="Texture2D" uid="uid://cln8jnx7xve5" path="res://scenes/objects/ball/bounce-ball-right-left/ball-2.png" id="13_fmj24"]
[ext_resource type="Texture2D" uid="uid://16uw4nvebgd4" path="res://scenes/objects/ball/bounce-ball-right-left/ball-3.png" id="14_y6xxe"]
[ext_resource type="Texture2D" uid="uid://cny3u6qbtxwi" path="res://scenes/objects/ball/bounce-ball-right-left/ball-4.png" id="15_hwl5p"]
[ext_resource type="Texture2D" uid="uid://rvsahtiwtckf" path="res://scenes/objects/ball/bounce-balll-top-to-bot/ball-1.png" id="17_163aa"]
[ext_resource type="Texture2D" uid="uid://d0wtxg3xb5vgm" path="res://scenes/objects/ball/bounce-balll-top-to-bot/ball-2.png" id="18_xuhdi"]
[ext_resource type="Texture2D" uid="uid://c1huaf761nkrk" path="res://scenes/objects/ball/bounce-balll-top-to-bot/ball-3.png" id="19_4nojj"]
[ext_resource type="Texture2D" uid="uid://x3305d7xjfjn" path="res://scenes/objects/ball/bounce-balll-top-to-bot/ball-4.png" id="20_qtu6f"]
[ext_resource type="Texture2D" uid="uid://cnax3bqkxqylr" path="res://scenes/objects/ball/bounce-balll-top-to-bot/ball-5.png" id="21_mlice"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qype3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dci52")
}, {
"duration": 1.0,
"texture": ExtResource("2_4tnid")
}, {
"duration": 1.0,
"texture": ExtResource("3_vk3rx")
}, {
"duration": 1.0,
"texture": ExtResource("4_1q8se")
}, {
"duration": 1.0,
"texture": ExtResource("5_u60dv")
}, {
"duration": 1.0,
"texture": ExtResource("4_1q8se")
}, {
"duration": 1.0,
"texture": ExtResource("3_vk3rx")
}, {
"duration": 1.0,
"texture": ExtResource("2_4tnid")
}, {
"duration": 1.0,
"texture": ExtResource("1_dci52")
}],
"loop": false,
"name": &"bot-top",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_nmr2v")
}, {
"duration": 1.0,
"texture": ExtResource("7_r4a1k")
}, {
"duration": 1.0,
"texture": ExtResource("8_emq21")
}, {
"duration": 1.0,
"texture": ExtResource("9_n540x")
}, {
"duration": 1.0,
"texture": ExtResource("10_l8roq")
}, {
"duration": 1.0,
"texture": ExtResource("9_n540x")
}, {
"duration": 1.0,
"texture": ExtResource("8_emq21")
}, {
"duration": 1.0,
"texture": ExtResource("7_r4a1k")
}, {
"duration": 1.0,
"texture": ExtResource("6_nmr2v")
}],
"loop": false,
"name": &"left-right",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_tvjly")
}, {
"duration": 1.0,
"texture": ExtResource("12_mkg85")
}, {
"duration": 1.0,
"texture": ExtResource("13_fmj24")
}, {
"duration": 1.0,
"texture": ExtResource("14_y6xxe")
}, {
"duration": 1.0,
"texture": ExtResource("15_hwl5p")
}, {
"duration": 1.0,
"texture": ExtResource("14_y6xxe")
}, {
"duration": 1.0,
"texture": ExtResource("13_fmj24")
}, {
"duration": 1.0,
"texture": ExtResource("12_mkg85")
}, {
"duration": 1.0,
"texture": ExtResource("11_tvjly")
}],
"loop": false,
"name": &"right-left",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_163aa")
}, {
"duration": 1.0,
"texture": ExtResource("18_xuhdi")
}, {
"duration": 1.0,
"texture": ExtResource("19_4nojj")
}, {
"duration": 1.0,
"texture": ExtResource("20_qtu6f")
}, {
"duration": 1.0,
"texture": ExtResource("21_mlice")
}, {
"duration": 1.0,
"texture": ExtResource("20_qtu6f")
}, {
"duration": 1.0,
"texture": ExtResource("19_4nojj")
}, {
"duration": 1.0,
"texture": ExtResource("18_xuhdi")
}, {
"duration": 1.0,
"texture": ExtResource("17_163aa")
}],
"loop": false,
"name": &"top-bot",
"speed": 45.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ugju"]
radius = 15.0

[node name="Ball" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_udoo6")

[node name="NormalBall" type="Sprite2D" parent="."]
position = Vector2(0.249994, 1.24999)
scale = Vector2(0.087, 0.087)
texture = ExtResource("1_3tgxj")

[node name="BounceBall" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 1)
scale = Vector2(0.087, 0.087)
sprite_frames = SubResource("SpriteFrames_qype3")
animation = &"bot-top"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1ugju")

[connection signal="animation_finished" from="BounceBall" to="." method="_on_bounce_ball_animation_finished"]
